[gd_scene load_steps=2 format=3 uid="uid://cutnqokeebtae"]

[ext_resource type="Script" uid="uid://ba27sa137jhjv" path="res://new_script.gd" id="1_bdr6p"]

[node name="MultiplayerUI_tscn" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 11.0
offset_right = -3.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bdr6p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = -17.0
offset_right = 404.0
offset_bottom = 307.0

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server Address"

[node name="Multiplayer Menu" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Player"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Current Status "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "send"

[node name="ChatBox" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ChatBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.89400005
offset_left = -7.0
offset_top = 9.0
offset_right = 114.93399
offset_bottom = 224.0

[node name="ChatMessages" type="VBoxContainer" parent="VBoxContainer/ChatBox/ScrollContainer"]
layout_mode = 2

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer/ChatBox"]
layout_mode = 0
offset_left = 2.0
offset_top = 201.0
offset_right = 295.0
offset_bottom = 201.0
text = "Test"
